# Movier

./: README.md  movie.sql  pyproject.toml
chat_app/: consumers.py  urls.py  views.py
chat_app/static/chat_app/css/: style.css
chat_app/static/chat_app/js/: script.js
chat_app/templates/chat_app/: base.html  index.html
movie_service/: asgi.py  db_config.py  settings.py  urls.py
rating_app/: forms.py  urls.py  views.py
rating_app/static/rating_app/css/: style.css
rating_app/templates/rating_app/: add_id.html  choose_movie.html  create_mark.html  marks.html
rating_app/utils/: cache.json
user_app/: urls.py  views.py
user_app/templates/user_app/: index.html  login.html  register.html
wishlist_app/: forms.py  urls.py  views.py
wishlist_app/templates/wishlist_app/: wishlist.html
